--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,9 @@
                 <%- partial(page) %>
             </div>
         </div>
+        <div class=pagefooter>
+	    Powered by <a href="http://github.com/stevepapa/veria">Veria CMS</a>
+        </div>
     </div>
-
 </body>
 </html>
