--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
-    <link href='<%- site.URL %>/assets/fonts/lato/lato.css' rel='stylesheet' type='text/css'>
+	<link href='<%- site.URL %>/assets/fonts/vollkorn/vollkorn.css' rel='stylesheet' type='text/css'>
+	<link href='<%- site.URL %>/assets/fonts/raleway/raleway.css' rel='stylesheet' type='text/css'>
     <link href="<%- site.URL %>/assets/css/index.css" rel="stylesheet" type="text/css">
 
     <title><%- title %></title>
