--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -201,13 +201,17 @@ pre code {
     margin-top:12px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 80%;
+    max-width: 90%;
 }
 
 .sidebar .splash .links .icon {
     padding: 2px;
     width: 40px;
     height: 40px;
+}
+
+.sidebar .splash .links .icon:hover {
+    opacity: 0.7;
 }
 
 .sidebar .recent-posts {
