--- a/views/index/sidebar.ejs
+++ b/views/index/sidebar.ejs
@@ -23,6 +23,9 @@
         <div class="recent-posts">
             <div class="title">
                 RECENT POSTS
+				
+				<a href="<%- site.URL %>/archive" class="showall">show all</a>
+				
             </div>
             <div>
                 <% recentPosts.forEach(function(recent) {  %>                
