--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -69,7 +69,7 @@ pre code {
         position: relative;
         float: right;
         height: 100%;
-	width: 300px;
+		width: 300px;
         overflow: hidden;
 }
 
@@ -273,6 +273,67 @@ pre code {
 .pagefooter a {
 	font-weight: bold;
 }
+
+.socialbar {
+	margin-top: 15px;
+	
+}
+
+.socialbar .button {
+	text-decoration: none;
+	border-radius: 2px;
+	display: inline-block;
+	height:26px;
+	line-height: 26px;
+	font-family: arial;
+	font-weight: bold;
+	color: white;
+	background: #a2c3d3;
+	font-size: 13px;
+	padding-right: 12px;
+	margin-right: 6px;
+	overflow: hidden;
+}
+
+.socialbar .button:hover {
+	background: #333;
+}
+
+.socialbar .button:before {
+    content: "";
+	background: url(../images/shareicons.png) 0px 0px no-repeat;
+    display: block;
+    width: 16px;
+    height: 16px;
+    float: left;
+    margin: 5px 8px 5px 8px;
+	border-radius: 2px;
+}
+
+.socialbar .facebook {
+	background-color: rgb(71, 99, 158);
+}
+
+.socialbar .facebook:before {
+    background-position: 0px 0px;
+}
+
+.socialbar .twitter {
+	background-color: #4db2ec;
+}
+
+.socialbar .twitter:before {
+    background-position: -16px 0px;
+}
+
+.socialbar .google {
+	background-color: #dd4b39;
+}
+
+.socialbar .google:before {
+    background-position: -32px 0px;
+}
+
 @media (max-width: 963px) {
     .splash {
 		margin: 0px !important;
@@ -312,6 +373,12 @@ pre code {
 }
 
 @media (max-width: 380px) {
+ 
+ .socialbar .button {
+	width:26px;
+	padding-left:5px;
+ }
+
  .pagebody {
         margin-top: 0px;
     }   
