--- a/views/index/post.ejs
+++ b/views/index/post.ejs
@@ -32,6 +32,24 @@
                 </div>
 
                 <div class="footer">
+				
+				<% if (disqus.enabled === true) { %>
+				
+				    <div id="disqus_thread" style="margin-bottom: -20px;"></div>
+					<script type="text/javascript">
+						/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+						var disqus_shortname = '<%- disqus.shortname %>'; 
+
+						(function() {
+							var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+							dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+							(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+						})();
+					</script>
+				
+				<% } %>
+				
+				
                 </div>
 
 </div>
