--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 			
         </div>
         <div class=pagefooter>
-	    Powered by <a href="http://github.com/stevepapa/veria">Veria CMS</a>
+	    Powered by <a href="http://veriacms.com">Powered by Veria Node JS CMS</a>
         </div>
     </div>
 </body>
